--- a/config.yml
+++ b/config.yml
@@ -1,64 +1,42 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
 jobs:
-  build-frontend:
+  build:
     docker:
-    - image: circleci/node:lst
+      # specify the version you desire here
+      - image: circleci/node:lts
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+
+
     working_directory: ~/repo
+
     steps:
-      - run: echo build-frontend step
+      - checkout
 
-    build-backend:
-      docker:
-      - image: circleci/node:lst
-      working_directory: ~/repo
-      steps:
-        - run: echo build-backend step
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+      - run: sudo npm i -g @angular/cli > /dev/null
 
-  test-frontend:
-    docker:
-      - image: circleci/node:lst
-      working_directory: ~/repo
-      steps:
-        - run: echo test-frontend step
-  test-backend:
-    docker:
-      - image: circleci/node:lst
-      working_directory: ~/repo
-      steps:
-        - run: echo test-backend step
-   integration-tests:
-     docker:
-       - image: circleci/node:lst
-       working_directory: ~/repo
-       steps:
-         - run: echo integration-tests step
+      - run: npm i
 
-    deploy:
-      docker:
-        - image: circleci/node:lst
-      working_directory: ~/repo
+      - run: ng build
 
-      steps:
-        - run: echo deploy step
+      - run: zip -r package.zip dist/package/
 
-    workflows:
-      version: 2
-      build-and-test:
-        jobs:
-          - build-frontend
-          - build-backend
-          - test-frontend
-              requires:
-              - build-frontend
-          - test-backend
-            requires:
-              - build-backend
-          - integration-tests:
-               requires:
-                 - build-backend
-                 - build-frontend
-          - deploy:
-            requires:
-              - test-frontend
-              - test-backend
-              - integration-tests
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      # run tests!
+      - run: ng lint  --force=true
